json uploads to s3

--- a/Data28completecoderev2.ipynb
+++ b/Data28completecoderev2.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "82841229",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,8 +341,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting boto3\n",
+      "  Downloading boto3-1.22.6-py3-none-any.whl (132 kB)\n",
+      "Collecting jmespath<2.0.0,>=0.7.1\n",
+      "  Using cached jmespath-1.0.0-py3-none-any.whl (23 kB)\n",
+      "Collecting botocore<1.26.0,>=1.25.6\n",
+      "  Downloading botocore-1.25.6-py3-none-any.whl (8.7 MB)\n",
+      "Collecting s3transfer<0.6.0,>=0.5.0\n",
+      "  Using cached s3transfer-0.5.2-py3-none-any.whl (79 kB)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in c:\\users\\jeff2\\anaconda3\\lib\\site-packages (from botocore<1.26.0,>=1.25.6->boto3) (1.25.9)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in c:\\users\\jeff2\\anaconda3\\lib\\site-packages (from botocore<1.26.0,>=1.25.6->boto3) (2.8.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\jeff2\\anaconda3\\lib\\site-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.26.0,>=1.25.6->boto3) (1.15.0)\n",
+      "Installing collected packages: jmespath, botocore, s3transfer, boto3\n",
+      "Successfully installed boto3-1.22.6 botocore-1.25.6 jmespath-1.0.0 s3transfer-0.5.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install boto3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "s3_client = boto3.client('s3')\n",
+    "bucket_list = s3_client.list_buckets()\n",
+    "bucket_name = 'data-28-final-project-files-group2'\n",
+    "bucket_contents = s3_client.list_objects_v2(Bucket='data-28-final-project-files-group2', Prefix='Talent')[\"Contents\"]\n",
+    "paginator = s3_client.get_paginator('list_objects_v2')\n",
+    "\n",
+    "op_param = {'Bucket': 'data-28-final-project-files-group2',\n",
+    "            'Prefix': 'Talent'}\n",
+    "page_iter = paginator.paginate(**op_param)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def extract_data():\n",
+    "    combined_data = pd.DataFrame()\n",
+    "    for page in page_iter:\n",
+    "        for content in page['Contents']:\n",
+    "            if content['Key'].endswith('.json'):\n",
+    "                result_json = content['Key']\n",
+    "                s3_object = s3_client.get_object(Bucket=bucket_name, Key=result_json)\n",
+    "                data = json.load(s3_object['Body'])  # returns contents of file as dictionary\n",
+    "                data_df = pd.DataFrame.from_dict(data, orient='index').T  # from dictionary converts to dataframe\n",
+    "                data_df['id'] = content['Key'].split('/')[1].split('.')[0] #adds if from the file name\n",
+    "                combined_data = pd.concat([combined_data, data_df], axis=0)  # adds data onto the dataframe\n",
+    "                combined_data.to_csv(\"final_json_all.csv\", encoding='utf-8', index=False)  # converts data to csv\n",
+    "    return combined_data\n",
+    "\n",
+    "a=extract_data()\n",
+    "# all_json='Jsons_to_CSV'\n",
+    "# def send_all_json():\n",
+    "#     s3_client.put_object(Bucket=bucket_name, Body=extract_data(), Key=f'{folder}/{all_json}.csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
-   "id": "e05c223b",
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +447,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7e811586",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +467,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "70c86a16",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +487,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2e9628fd",
    "metadata": {},
    "outputs": [
     {
@@ -444,8 +512,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def upload_to_s3(filename,key, bucketname = bucket_name,):\n",
+    "    s3_client.upload_file(Filename= filename, Bucket=bucket_name,Key=key)\n",
+    "\n",
+    "\n",
+    "upload_to_s3(filename='final_json_all.csv',key='Data28group2cleanfiles/FinalJsonFile.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6283f977",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -453,7 +533,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -467,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
